@@ -53,6 +53,8 @@
     <dependency org="org.vafer" name="jdeb" rev="0.8" conf="package->master"/>
 
     <dependency org="junit" name="junit" rev="4.8.1" conf="test->default"/>
+     <dependency org="org.mockito" name="mockito-all" rev="1.8.2"
+               conf="test->default"/>
     <dependency org="checkstyle" name="checkstyle" rev="5.0"
                 conf="test->default"/>
 
